crates/math-core/tests/snapshots/conversion_test__genfrac_0.4ex.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\genfrac(]{0.4ex}{2}{a+b}{c+d}"
---
<math>
    <mrow displaystyle="false" scriptlevel="1">
        <mo>(</mo>
        <mfrac linethickness="0.4ex">
            <mrow>
                <mi>a</mi>
                <mo lspace="0" rspace="0">+</mo>
                <mi>b</mi>
            </mrow>
            <mrow>
                <mi>c</mi>
                <mo lspace="0" rspace="0">+</mo>
                <mi>d</mi>
            </mrow>
        </mfrac>
        <mo>]</mo>
    </mrow>
</math>
