crates/math-core/tests/snapshots/conversion_test__genfrac_1pt_with_interargument_space.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\genfrac(]   {1pt}{2}{a+b}{c+d}"
---
<math>
    <mrow displaystyle="false" scriptlevel="1">
        <mo>(</mo>
        <mfrac linethickness="0.1rem">
            <mrow>
                <mi>a</mi>
                <mo lspace="0" rspace="0">+</mo>
                <mi>b</mi>
            </mrow>
            <mrow>
                <mi>c</mi>
                <mo lspace="0" rspace="0">+</mo>
                <mi>d</mi>
            </mrow>
        </mfrac>
        <mo>]</mo>
    </mrow>
</math>
