crates/math-core/tests/snapshots/conversion_test__greater_than.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: x > y
---
<math>
    <mi>x</mi>
    <mo>&gt;</mo>
    <mi>y</mi>
</math>
