crates/math-core/tests/snapshots/conversion_test__greek_letter.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\alpha"
---
<math>
    <mi>α</mi>
</math>
